<resources>
    <string name="app_name">Ship Calculation</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="enter_vessel_data">Enter Vessel Data!</string>
    <string name="lbm">LBM</string>
    <string name="fore_distance">Fore Distance (-/+)</string>
    <string name="mid_distance">Mid Distance (-/+)</string>
    <string name="aft_distance">Aft Distance (-/+)</string>
    <string name="enter_draft">Enter Draft!</string>
    <string name="fwd_p">Fwd P</string>
    <string name="fwd_s">Fwd S</string>
    <string name="fwd_d">Fwd D</string>
    <string name="fwd_corr">Fwd corr.</string>
    <string name="mid_p">Mid P</string>
    <string name="mid_s">Mid S</string>
    <string name="mid_d">Mid D</string>
    <string name="mid_corr">Mid corr.</string>
    <string name="aft_p">Aft P</string>
    <string name="aft_s">Aft S</string>
    <string name="aft_d">Aft D</string>
    <string name="aft_corr">Aft corr.</string>
    <string name="trim_apparent">Trim Apparent</string>
    <string name="corrected_trim">Corrected Trim</string>
    <string name="mean_of_mean">Mean Of mean</string>
    <string name="calculate_b">Calculate</string>
    <string name="fwd">Fwd</string>
    <string name="hata_mesaj_burada_g_r_necek">Hata mesajı burada görünecek</string>
    <string name="hog_sag">Hog/Sag</string>
    <string name="initial">Initial</string>
    <string name="final_draft_survey">Final Draft Survey</string>
    <string name="initial_draft_survey">Initial Draft Survey</string>
    <string name="finaldraft">Final</string>
    <string name="lbp">LBP</string>
    <string name="ship_name">Ship Name</string>
    <string name="i_m_o">I M O</string>
    <string name="light_ship">Light Ship</string>
    <string name="t_p_c">T P C</string>
    <string name="l_c_f">L C F</string>
    <string name="_1st_trim_correction">1st Trim Correction</string>
    <string name="mtc1">MTC 1</string>
    <string name="mtc2">MTC 2</string>
    <string name="_2nd_trim_correction">2nd Trim Correction</string>
    <string name="displacement">Displacement</string>
    <string name="corrected_displacement">Corrected Displacement</string>
    <string name="density">Density</string>
    <string name="density_corr">Density Corr.</string>
    <string name="ballast">Ballast</string>
    <string name="bunker">Bunker</string>
    <string name="fw">FW</string>
    <string name="l_oil">L/Oil</string>
    <string name="others">Others</string>
    <string name="constant">Constant</string>
    <string name="net_displacement">Net Displacement</string>
    <string name="total_deductions">Total Deductions</string>
    <string name="portLoad">Port of Load.</string>
    <string name="portDischarge">Port of Disch.</string>
    <string name="date">Date</string>
    <string name="call_sign">Call Sign</string>
    <string name="vov_no">Voy.No</string>
    <string name="cargo">Cargo</string>
    <string name="pdf_generate">Pdf Generate</string>
    <string name="pdf_report">Pdf Report</string>
    <string name="initial_date">Initial Date</string>
    <string name="mid">Mid</string>
    <string name="aft">Aftd</string>
    <string name="trim">Trim</string>
    <string name="trim_corr">Trim Corr.</string>
    <string name="m_m_m">M.M.M</string>
    <string name="first_t_corr">First T.Corr</string>
    <string name="disp">Disp.</string>
    <string name="corr_disp">Corr.Disp</string>
    <string name="todo">TODO</string>
    <string name="select_date">Select Date</string>
    <string name="enter_voyage_data">Enter Voyage Data</string>
    <string name="report">Report</string>
    <string name="flag">Flag</string>
    <string name="grt">GRT.</string>
    <string name="nrt">N.R.T</string>
    <string name="save">Save</string>
    <string name="save_and_go_next">Save and Go Next</string>
    <string name="go_to_final">Go To Final</string>
    <string name="first_trim_correction">First Trim Correction</string>
    <string name="corr_displacement">Corr.Displacement</string>
    <string name="density_correction">Density Correction</string>
    <string name="port">Port</string>
    <string name="stb">Stb</string>
    <string name="draft">Draft</string>
    <string name="go_to_result">Go To Result</string>
    <string name="corr_d">Corr.D</string>
    <string name="afd">Afd</string>
    <string name="f_corr">F.Corr</string>
    <string name="m_corr">M.Corr</string>
    <string name="a_corr">A.Corr</string>
    <string name="port_of_loading">Port Of Loading</string>
    <string name="vessel_name">Vessel Name</string>
    <string name="port_of_discharging">Port Of Disch.</string>
    <string name="light_s">Light S.</string>
    <string name="unknown_weight">UnKnown Weight</string>
    <string name="distance_from_perpendiculars">Distance From Perpendiculars</string>
    <string name="initial_ballast">Initial Ballast</string>
    <string name="final_ballast">Final Ballast</string>
    <string name="draft_act">Draft Calculation</string>
    <string name="go_to_home">Go to home</string>
    <string name="date_saat">Date Hrs</string>
    <string name="draftr">draftr</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="ship_calculations">Ship Calculations</string>
    <string name="marinerseagull_gmail_com">marinerseagull@gmail.com</string>
    <string name="image">TODO</string>
    <string name="clear">Clear</string>
    <string name="x2">X2</string>
    <string name="y2">Y2</string>
    <string name="trimint">Trim</string>
    <string name="sounding">Sounding</string>
    <string name="trim1">Trim1</string>
    <string name="trim2">Trim2</string>
    <string name="s1">S1</string>
    <string name="q1">Q1</string>
    <string name="q">Q</string>
    <string name="x1">X1</string>
    <string name="s">S</string>
    <string name="qs">QS</string>
    <string name="qc">QC</string>
    <string name="xs">XS</string>
    <string name="s2">S2</string>
    <string name="q2">Q2</string>
    <string name="qs2">QS2</string>
    <string name="x1_">X1_</string>
    <string name="x2_">X2_</string>
    <string name="trim_">Trim_</string>
    <string name="x_">X</string>
    <string name="result">Result</string>
    <string name="if_have_corr_use">If have Corr use</string>
    <string name="dwt">DWT</string>
    <string name="fresh_w">Fresh W</string>
    <string name="const_other">Const./Other</string>
    <string name="max_loading_cap">Loading Cap.</string>
    <string name="m_t_cu_m">M.T/Cu.M.</string>
    <string name="no">No</string>
    <string name="cu_m3">Cu.m3</string>
    <string name="perct">Perct</string>
    <string name="hold_m_t">Hold M/T</string>
    <string name="_1">1</string>
    <string name="hold_no1">Hold No!</string>
    <string name="yuzde">%</string>
    <string name="_2">2</string>
    <string name="hold_no2">Hold No2</string>
    <string name="no2">No2</string>
    <string name="_3">3</string>
    <string name="hold_no3">Hold No3</string>
    <string name="no3">No3</string>
    <string name="total">Total</string>
    <string name="stw_factor">Add.Stw Factor</string>
    <string name="calculate">Calculate</string>
    <string name="d_w_t">D.W.T</string>
    <string name="ballastd">Ballast</string>
    <string name="l_oil_">L_OIL</string>
    <string name="y">%</string>
    <string name="perc">%</string>
    <string name="ballast_quantity">Ballast Quantity</string>
    <string name="hold_1">Hold 1</string>
    <string name="hold_2">Hold 2</string>
    <string name="hold_3">Hold 3</string>
    <string name="sayi1">No1</string>
    <string name="bunker_quantity">Bunker Quantity</string>
    <string name="write_stw_factor">Write Stw Factor</string>
    <string name="interpolation">Interpolation</string>
    <string name="cargo_calculation">Cargo Calculation</string>
    <string name="draft_calculation">Draft Calculation</string>
    <string name="home">Home</string>
    <string name="hold_no_1_capacity_cu_mt">Hold:1 Capacity m³</string>
    <string name="no_1_capacity">No:1 Capacity</string>
    <string name="hold_no_2_capacity_cu_mt">Hold:2 Capacity m³</string>
    <string name="hold_no_2_capacity">Hold No:2 capacity</string>
    <string name="hold_no_3_capacity_cu_mt">Hold:3 Capacity m³</string>
    <string name="hold_no_4_capacity_cu_mt">Hold:4 Capacity m³</string>
    <string name="hold_no_4_capacity">Hold No:4 capacity</string>
    <string name="hold_no_5_capacity_cu_mt">Hold:5 Capacity m³</string>
    <string name="hold_no_5_capacity">Hold No:5 capacity</string>
    <string name="hold_no_6_capacity">Hold No:6 capacity</string>
    <string name="hold_no_6_capacity_cu_mt">Hold:6 Capacity m³</string>


    <string name="no_3_capacity">No:3 Capacity</string>
    <string name="no_2_capacity">No:2 Capacity</string>
    <string name="vessel_hold_capacity_cu_mt">Vessel Hold Capacity m³</string>
    <string name="hold_no_1">Hold No:1</string>
    <string name="hold_no_2">Hold No:2</string>
    <string name="hold_no_3">Hold No:3</string>
    <string name="hold">Hold</string>
    <string name="stwc_factor">Stwc. Factor</string>
    <string name="total_cu_mt">Total Cu/Mt</string>
    <string name="total_cap_cu_mt">Total Cap. cu/mt</string>
    <string name="dw">DW</string>
    <string name="port_fwd">Port Fwd</string>
    <string name="stowage_factor">Stowage Factor</string>
    <string name="starboard_fwd">Starboard Fwd</string>
    <string name="port_mid">Port Mid</string>
    <string name="starboard_mid">Starboard Mid</string>
    <string name="port_aft">Port Aft</string>
    <string name="starboard_aft">Starboard Aft</string>
    <string name="create_ballast_tank">Create Ballast Tank</string>
    <string name="tank_no">Tank No</string>
    <string name="tank_capacity">Tank Capacity</string>
    <string name="tank_type">Tank Type</string>
    <string name="tank_sounding">Tank Sounding</string>
    <string name="tank_volume">Tank Volume</string>
    <string name="ballast_tank_weight">Ballast Tank Weight</string>
    <string name="update_ballast_tank">UpDate Ballast Tank</string>
    <string name="create_fresh_water_tank">Create Fresh Water Tank</string>
    <string name="view_ballast_tank">View Ballast Tank</string>
    <string name="view_fresh_water_tank">View Fresh Water Tank</string>
    <string name="vessel_tanks">Vessel Tanks</string>
    <string name="ballast_tanks">Ballast Tanks</string>
    <string name="total_volume">Total Volume</string>
    <string name="total_weight">Total Weight</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_tank_s">Add Tank(s)</string>
    <string name="select_date_time">Select Date Time</string>
    <string name="total_capacity">Total Capacity</string>
    <string name="select_tank_type">Select Tank Type</string>
    <string name="create_tank">Create Tank</string>
    <string name="generate_pdf_report">Generate PDF Report</string>
    <string name="create_report">Create Report</string>
    <string name="log_filter_all">All Logs</string>
    <string name="log_filter_last_10">Last 10 Records</string>
    <string name="log_filter_last_30_days">Last 30 Days</string>
    <string name="fresh_water_tank">Fresh Water Tanks</string>
    <string name="ship_calculation_logo">Ship Calculation Logo</string>
    <string name="settings">Settings</string>
    <string name="no4">No4</string>
    <string name="no5">No5</string>
    <string name="no6">No6</string>


    <string-array name="log_filter_options">
        <item>All Logs</item>
        <item>Last 10 Records</item>
        <item>Last 30 Days</item>
        <!-- İhtiyaç duyarsanız daha fazla filtre ekleyebilirsiniz -->
    </string-array>
</resources>