<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".CreateFreshWaterTankActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#40C4FF"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_fresh_water_tank"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateTimeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/select_date_time"
            android:textColorHint="@color/progress_bar_background_yellow"
            app:boxStrokeColor="@color/text_input_box_stroke_color_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:selectAllOnFocus="true"
                android:textSize="25sp"
                android:textColor="@color/text_color_blue"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tankNoLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/tank_no"
            android:textColorHint="@color/progress_bar_background_yellow"
            app:boxStrokeColor="@color/text_input_box_stroke_color_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTankNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                android:textColor="@color/text_color_blue"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tankTypeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/tank_type"
            android:textColorHint="@color/progress_bar_background_yellow"
            app:boxStrokeColor="@color/text_input_box_stroke_color_selector">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTankType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_tank_type"
                android:inputType="textCapCharacters"
                android:selectAllOnFocus="true"
                android:text="@string/select_tank_type"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/text_color_blue"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tankCapacityLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/tank_capacity"
            android:textColorHint="@color/progress_bar_background_yellow"
            app:boxStrokeColor="@color/text_input_box_stroke_color_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTankCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/text_color_blue"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tankSoundingLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/tank_sounding"
            android:textColorHint="@color/progress_bar_background_yellow"
            app:boxStrokeColor="@color/text_input_box_stroke_color_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTankSounding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/text_color_blue"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tankVolumeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/tank_volume"
            android:textColorHint="@color/progress_bar_background_yellow"
            app:boxStrokeColor="@color/text_input_box_stroke_color_selector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTankVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/text_color_blue"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonCreateFreshWaterTank"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_tank"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"  />


    </LinearLayout>

</ScrollView>
